--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zlata-naumova/test-pipeline.git"
@@ -18,5 +15,44 @@
   "homepage": "https://github.com/zlata-naumova/test-pipeline#readme",
   "devDependencies": {
     "cypress": "^4.4.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run lint && npm run types && npm run stop-only",
+    "start": "serve --listen ${PORT:-8080}",
+    "start:ci": "serve --no-clipboard --listen ${PORT:-8080}",
+    "start:ci:windows": "serve --no-clipboard --listen 8080",
+    "dev": "npm start",
+    "types": "tsc --noEmit",
+    "pretest": "npm run lint && npm run types",
+    "print-env": "print-env",
+    "lint": "eslint --fix cypress/**/*.js app/assets/js/scripts.js",
+    "lint:yaml": "yamllint '*.yml' 'basic/*.yml' .buildkite/pipeline.yml .semaphore/semaphore.yml '.github/workflows/*.yml'",
+    "colon:names": "colon-names",
+    "e2e": "cypress run",
+    "e2e:chrome": "cypress run --browser chrome",
+    "e2e:record": "cypress run --record",
+    "e2e:record:edge": "cypress run --record --browser edge",
+    "e2e:record:parallel": "cypress run --record --parallel",
+    "test:ci": "run-p --race start:ci e2e",
+    "test:ci:chrome": "run-p --race start:ci e2e:chrome",
+    "test:ci:record": "run-p --race start:ci e2e:record",
+    "test:ci:record:windows": "run-p --race start:ci:windows e2e:record",
+    "test:ci:record:windows:edge": "run-p --race start:ci:windows e2e:record:edge",
+    "test:ci:record:parallel": "run-p --race start:ci e2e:record:parallel",
+    "cy:verify": "cypress verify",
+    "cy:info": "cypress info",
+    "cy:version": "cypress version",
+    "cy:cache:list": "cypress cache list",
+    "cy:run": "cypress run",
+    "cy:run:record": "cypress run --record",
+    "cy:open": "cypress open",
+    "local:open": "start-test 8080 cy:open",
+    "local:run": "start-test 8080 cy:run",
+    "local:run:record": "start-test 8080 cy:run:record",
+    "stop-only": "stop-only -f cypress/integration",
+    "warn-only": "stop-only -f cypress/integration --warn",
+    "ci:set-port": "node ./scripts/set-port",
+    "semantic-release": "semantic-release"
   }
 }
